# sovol

./: .gitignore  CHANGELOG.md  Makefile.am  README.md  USAGE.md  configure.ac  input.lua  make-wasm.sh  sovol-cli
cli/: Makefile.am  input.lua  main.cc
example/: Cyclotron.js  Cyclotron.json  LinearlyPolarizedLaser.js  LinearlyPolarizedLaser.json  Synchrocyclotron.js  Synchrocyclotron.json
html/: common.js  figure.js  index.html  index.pug  script.js  style.css
lib/: Algorithm.cc  Algorithm.hh  AlgorithmFactory.hh  Config.hh  Distribution.hh  FactoryHelper.hh  Field.cc  Field.hh  FieldFactory.hh  FieldShifter.cc  FieldShifter.hh  FieldWithShifters.hh  LaguerreGaussianPulseField.cc  LaguerreGaussianPulseField.hh  Lua.cc  Lua.hh  LuaFactoryHelper.hh  Makefile.am  Particle.cc  Particle.hh  ParticleFactory.cc  ParticleFactory.hh  ParticleFactoryProducer.hh  ParticleProducer.cc  ParticleProducer.hh  ParticleShifter.cc  ParticleShifter.hh  RealTimeRepeatSimulation.cc  RealTimeRepeatSimulation.hh  Rotator.hh  Utils.cc  Utils.hh  Vector3.hh  WasmFactoryHelper.hh  config.hh
src/: Algorithm.cc  Algorithm.hh  Field.cc  Field.hh  FieldShifter.cc  FieldShifter.hh  Particle.cc  Particle.hh  ParticleProducer.hh  ParticleShifter.cc  ParticleShifter.hh  Rotator.cc  Rotator.hh  Table.cc  Table.hh  Utils.cc  Utils.hh  config.hh  utils.cc  utils.hh
src/cli/: BoundedBuffer.hh  FactoryHelper.hh  Lua.cc  Lua.hh  Simulator.cc  Simulator.hh  Storage.cc  Storage.hh  main.cc
src/wasm/: FactoryHelper.hh  RealTimeRepeatSimulation.cc  WasmSimulation.cc  WasmSimulation.hh  main.cc
wasm/: Makefile.am  WasmSimulation.cc  WasmSimulation.hh  WasmSimulationFactory.hh  make-wasm.sh  wasm.cc
